[package]
name = "kubectl-log-index"
version = "0.1.0"
edition = "2024"

[dependencies]
k8s-openapi = { version = "0.26.0", default-features = false, features = ["v1_32"] }
kube = { version = "2.0.1", features = ["runtime", "client"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.30", features = ["full"] }
anyhow = "1.0"
futures = "0.3"